fix: latest updates including tickets, admin, schema, assets cleanup
